--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- 
+
  @import url("http://fnt.webink.com/wfs/webink.css/?project=548D2AB5-FEF2-4BB9-BA39-A9506DCC5723&fonts=81DCB682-CEF0-F2EE-50B4-29BCB883721E:f=Ablefont");
  @import url(http://fonts.googleapis.com/css?family=Irish+Grover);
 
@@ -60,4 +60,5 @@
  img {
    border-radius: 40%;
    height: 300px;
+   width: 200px;
  }
